@@ -7,4 +7,11 @@ h8300s_multiple:
 	stm.l er0-er1,@-sp
 	stm.l er0-er2,@-sp
 	stm.l er0-er3,@-sp
+        ldm.l @sp+,er2-er3
+        stm.l er2-er3,@-sp
+        ldm.l @sp+,er4-er5
+        ldm.l @sp+,er4-er6
+        stm.l er4-er5,@-sp
+        stm.l er4-er6,@-sp
+
 
